Fix naming and spacing errors

--- a/Common/theme.css
+++ b/Common/theme.css
@@ -1,12 +1,11 @@
 :root {
-  --color-primary: #0055A6;
+  --color-primary: #0055a6;
   --color-primary-light: #454443;
-  --color-secondary: #2B705E;
-  --color-accent-orange: #DD715D;
-  --color-neutral-grey: #F5F5F5;
-
+  --color-secondary: #2b705e;
+  --color-accent-orange: #dd715d;
+  --color-neutral-grey: #f5f5f5;
   --font-primary: "Freight Text", Georgia, serif;
-  --font-secondary:"Futura", sans-serif;
+  --font-secondary: "Futura", sans-serif;
 }
 
 html {
